install/cube/templates/extsvc/nexus_endpoint.yml
apiVersion: v1
kind: Endpoints
metadata:
  name: nexus
  namespace: dev
subsets:
- addresses:
  - ip: 10.10.12.87
  ports:
  - port: 8081
    protocol: TCP
